# ICRA-RM-Sim2Real-Baseline

./: .gitignore  Dockerfile  README.md  readme.md  reference.md  routines.md  start.sh
ep_teleop/launch/: joy_stick.launch
ep_teleop/script/: teleop_twist_keyboard.py
ep_teleop/src/: control_teleop.cpp  joy_driver.cpp
scripts/: build.sh  halt.sh  judging.sh  kbd_control.sh  launch.sh  shell.sh
src/carto_navigation/: CMakeLists.txt  package.xml
src/carto_navigation/launch/: cartographer.launch  cartographer_localization.launch  map_writer.sh  mapping.launch  move_base.launch  navigation.launch
src/carto_navigation/maps/: map.pbstream  map.pgm  map.yaml
src/carto_navigation/param/: cartographer_2d.lua  cartographer_2d_localization.lua
src/carto_navigation/param/dwa/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/carto_navigation/param/teb/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/carto_navigation/rviz/: mapping.rviz  navigation.rviz
src/rmus_solution/: CMakeLists.txt  package.xml
src/rmus_solution/launch/: carto_navigation.launch  manipulate.launch  start_game.launch
src/rmus_solution/scripts/: detect.py  img_processor.py  manipulater.py  navi_control.py  play_game.py
src/rmus_solution/srv/: graspsignal.srv  setgoal.srv  switch.srv
src/sim2real_ep/ep_bringup/: CMakeLists.txt  (+1 more)
src/sim2real_ep/ep_teleop/: CMakeLists.txt  package.xml
src/sim2real_ep/ep_teleop/include/: control_teleop.h
src/sim2real_ep/ep_teleop/launch/: keyboard.launch
src/sim2real_ep/ep_teleop/script/: teleop_twist_keyboard.py
(+14 files in other folders)
